# mlops_project

./: .env  .gitignore  .pre-commit-config.yaml  README.md  TODO.txt  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
data/: heart.csv
mlops_src/logger/: get_logger.py
mlops_src/mlops/: main.py
mlops_src/mlops/artifacts/: model_evaluation_artifact.py
mlops_src/mlops/components/: best_model_selector.py  data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_training.py
mlops_src/mlops/config/: best_model_selector_config.py  model_training_config.py
mlops_src/mlops/utils/: best_model_selector_utils.py  common_utils.py  data_ingestion_utils.py  data_transformation_utils.py  data_validation_utils.py  model_evaluation_utils.py  model_training_utils.py
src/backend/: Dockerfile  app.py  backend_requirements.txt  config.py  middleware.py
src/backend/auth/: dependencies.py  models.py  routes.py  schemas.py  service.py  utils.py
src/backend/db/: main.py  redis.py
src/backend/prediction/: models.py  routes.py  schemas.py  service.py  utils.py
src/frontend/: Dockerfile  main.py
src/logger/: get_logger.py  logging_config.yaml
src/logging/: get_logger.py
src/mlops/: main.py
src/mlops/artifacts/: data_transformation_artifact.py  data_validation_artifact.py  model_training_artifact.py
src/mlops/components/: best_model_selector.py  data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_training.py
src/mlops/config/: best_model_selector_config.py  common_config.py  (+6 more)
(+17 files in other folders)
