[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "my-mlops-project"
version = "0.1.0"
description = "MLOps Project with Backend and Frontend"
authors = [
    { name = "Niels Scholz", email = "niels@niels.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["src*"]
